--- a/app/src/main/res/layout/activity_wallet_ammount.xml
+++ b/app/src/main/res/layout/activity_wallet_ammount.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <RelativeLayout
+        android:layout_marginTop="50dp"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_gravity="center"
