--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -71,14 +71,15 @@
             >
         <TextView
             android:id="@+id/home_icon"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:textColor="@color/black"
             android:background="@drawable/store1"
             android:textAlignment="center"
             android:layout_gravity="center"
             />
             <TextView
+                android:textSize="12sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/stores"
@@ -96,14 +97,15 @@
             android:id="@+id/bot_categories"
             >
             <TextView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:textColor="@color/black"
                 android:background="@drawable/category1"
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 />
             <TextView
+                android:textSize="12sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/caty"
@@ -121,14 +123,15 @@
             android:id="@+id/bot_fav"
             >
             <TextView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:textColor="@color/black"
                 android:background="@drawable/fav1"
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 />
             <TextView
+                android:textSize="12sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/favourt"
@@ -142,7 +145,6 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="20"
-
             android:id="@+id/bot_cart"
             >
 
@@ -151,8 +153,8 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="2dp"
                 android:id="@+id/actionbar_notifcation_textview"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
+                android:layout_width="14dp"
+                android:layout_height="14dp"
                 android:gravity="center"
                 android:textAlignment="center"
                 android:background="@drawable/xml_budget"
@@ -160,18 +162,19 @@
                 android:padding="1dp"
                 android:text="99"
                 android:textColor="#ffffff"
-                android:textSize="9sp" />
+                android:textSize="8sp" />
 
             <TextView
                 android:layout_centerHorizontal="true"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:textColor="@color/black"
                 android:background="@drawable/cart2"
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 />
             <TextView
+                android:textSize="12sp"
                 android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -193,14 +196,15 @@
             >
             <TextView
                 android:layout_centerHorizontal="true"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:textColor="@color/black"
                 android:background="@drawable/account1"
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 />
             <TextView
+                android:textSize="12sp"
                 android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
