--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -163,6 +163,7 @@
                 android:text="@string/checkout"
                 android:padding="10dp"
                 android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:background="@drawable/butonshape"
                 android:textColor="#fff"
                 android:textSize="15sp" />
