--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -57,6 +57,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:padding="@dimen/space_5"
             app:cardElevation="@dimen/space_4">
         <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/collapsing_recycler"
