--- a/app/src/main/res/layout/fragment_empty_cart.xml
+++ b/app/src/main/res/layout/fragment_empty_cart.xml
@@ -49,11 +49,12 @@
         android:text="@string/add_cart"
         android:textAlignment="center"
         android:textColor="@color/dark_gray"
-        android:textSize="22dp"
+        android:textSize="22sp"
         android:textStyle="bold"
         android:fontFamily="@font/bold" />
 
     <RelativeLayout
+        android:layout_marginTop="@dimen/space_20"
         android:id="@+id/btn_shopnow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -67,11 +68,19 @@
 <!--            android:textColor="#fff"-->
 <!--            android:textSize="@dimen/text_size_small" />-->
 
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/goshop"/>
+
+        <TextView
+            android:layout_alignParentStart="true"
+            android:background="@drawable/goshop"
+            android:id="@+id/catname"
+            android:layout_width="190dp"
+            android:layout_height="62dp"
+            android:text="@string/go_shop"
+            android:gravity="center"
+            android:layout_centerInParent="true"
+            android:maxLines="1"
+            android:textColor="@color/white"
+            android:textSize="16sp"/>
 
     </RelativeLayout>
 
