--- a/app/src/main/res/layout/fragment_stores.xml
+++ b/app/src/main/res/layout/fragment_stores.xml
@@ -142,6 +142,7 @@
                                 android:layout_height="match_parent"
                                 android:gravity="center">
                                 <TextView
+                                    android:textSize="12sp"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_horizontal"
@@ -170,6 +171,7 @@
                                 android:layout_height="match_parent"
                                 android:gravity="center">
                                 <TextView
+                                    android:textSize="12sp"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_horizontal"
@@ -204,6 +206,7 @@
                                 android:gravity="center">
 
                                 <TextView
+                                    android:textSize="12sp"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_horizontal"
