--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/iv_product_detail_img"
             android:background="@color/green"
-            android:paddingLeft="15dp"
+            android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingBottom="5dp"
             android:paddingTop="5dp">
@@ -51,6 +51,16 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 />
+            <ImageView
+                android:id="@+id/fav_share"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:padding="3dp"
+                android:layout_marginEnd="@dimen/space_5"
+                android:background="@drawable/ic_baseline_share_24"
+                android:layout_toStartOf="@id/fav_product"
+                />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -64,13 +74,13 @@
             <Fonts.LatoBLack
                 android:id="@+id/tv_product_detail_title"
                 android:layout_width="0dp"
-                android:layout_weight="2"
+                android:layout_weight="1.7"
                 android:layout_height="wrap_content"
                 android:text="TextView"
                 android:paddingRight="10dp"
                 android:paddingEnd="10dp"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:maxLines="1"/>
 
 
@@ -84,7 +94,7 @@
                 android:paddingRight="10dp"
                 android:paddingEnd="10dp"
                 android:textColor="@color/white"
-                android:textSize="18sp" />
+                android:textSize="14sp" />
 
             </LinearLayout>
         </RelativeLayout>
@@ -275,7 +285,7 @@
                 android:text="@string/ratiii"
                 android:textColor="#000"
                 android:layout_marginTop="@dimen/space_5"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
             <ImageView
                 android:layout_marginTop="@dimen/space_5"
                 android:id="@+id/allrate"
