--- a/app/src/main/res/layout/fragment_acount.xml
+++ b/app/src/main/res/layout/fragment_acount.xml
@@ -602,7 +602,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="3"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="@dimen/space_10"
             >
             <TextView
@@ -620,21 +620,15 @@
                 android:layout_weight="1"
                 />
 
-            <TextView
+            <ImageView
+                android:id="@+id/maroof_id"
+                android:background="@drawable/maroofi"
+                android:layout_width="15dp"
+                android:layout_height="30dp"
                 android:layout_marginTop="@dimen/space_10"
                 android:layout_marginBottom="@dimen/space_10"
-                android:layout_gravity="center"
-                android:gravity="center"
+                android:layout_weight="1" />
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/maroof"
-                android:id="@+id/maroof_id"
-                android:textSize="10sp"
-                android:textColor="@color/black"
-                android:textAlignment="center"
-                android:layout_weight="1"
-                />
             <TextView
                 android:layout_marginTop="@dimen/space_10"
                 android:layout_marginBottom="@dimen/space_10"
