--- a/app/src/main/res/drawable/bac2.xml
+++ b/app/src/main/res/drawable/bac2.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:color="@color/black"
-    tools:targetApi="lollipop"
-    >
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@color/black" />
-            <corners
-                android:radius="30dp"/>
-
-
-        </shape>
-    </item>
-    <!--    <solid android:color="@color/color1"/>-->
-</ripple>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid
+        android:color="#000000"
+        />
+    <corners
+        android:radius="30dp"
+        />
+</shape>
