--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -265,25 +265,21 @@
             android:layout_marginBottom="2dp"
             >
 
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="25dp"
                 android:paddingRight="25dp"
                 android:paddingTop="12dp"
-
                 android:layout_centerHorizontal="true"
                 android:paddingBottom="12dp"
                 android:gravity="center"
-
                 android:text="@string/btn_continue"
                 android:background="@drawable/bac2"
                 android:textColor="#fff"
                 android:textStyle="bold"
-                android:textSize="17dp"
+                android:textSize="17sp"
                 />
-
 
         </RelativeLayout>
 <!--        </LinearLayout>-->
