--- a/app/src/main/res/layout/activity_reward_points.xml
+++ b/app/src/main/res/layout/activity_reward_points.xml
@@ -5,6 +5,17 @@
     android:layout_gravity="center_vertical"
     android:orientation="vertical">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+
+
     <RelativeLayout
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -100,5 +111,24 @@
 
     </RelativeLayout>
 
+            <TextView
+                android:textColor="@color/black"
+                android:layout_margin="@dimen/space_20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="*Note:"
+                />
+
+            <TextView
+                android:layout_marginBottom="@dimen/space_10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:text=" 300 J6 Points  ->  50 SAR\n   600 J6 Points  ->  150 SAR
+\n  1000 J6 Points  ->  300 SAR"
+                />
+
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
 
