--- a/app/src/main/res/layout/fragment_delivery_time.xml
+++ b/app/src/main/res/layout/fragment_delivery_time.xml
@@ -65,7 +65,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:cardCornerRadius="@dimen/space_15"
-                    android:layout_marginBottom="@dimen/space_5"
                     app:cardElevation="3dp">
                 <Fonts.LatoBLack
                     android:paddingTop="15dp"
@@ -86,14 +85,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/space_10"
+                android:layout_marginTop="5dp"
                 android:orientation="vertical">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/space_5"
-                    android:padding="@dimen/space_8"
+                    android:padding="5dp"
                     android:background="@drawable/shape"
                     android:orientation="horizontal">
 
@@ -157,6 +156,20 @@
         android:layout_alignParentBottom="true"
         android:background="@color/white"
         android:orientation="vertical">
+
+        <LinearLayout
+            android:padding="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <TextView
+                android:id="@+id/show_delivery_charges_string"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Delivery charges"
+                android:textColor="@color/black"
+                />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -232,10 +245,6 @@
                 android:text="@string/tv_del_continue"
                 android:textColor="#fff"
                 android:textSize="17dp"/>
-
-
-
-
 
         </RelativeLayout>
     </LinearLayout>
