--- a/app/src/main/res/layout/row_delivery_time_rv_test.xml
+++ b/app/src/main/res/layout/row_delivery_time_rv_test.xml
@@ -144,6 +144,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:visibility="gone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/space_5"
