--- a/app/src/main/res/layout/activity_payment_method.xml
+++ b/app/src/main/res/layout/activity_payment_method.xml
@@ -181,6 +181,7 @@
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/space_5"
                                 android:weightSum="2">
 
                                 <LinearLayout
@@ -188,7 +189,6 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:orientation="vertical">
-
 
                                     <Fonts.LatoBLack
                                         android:layout_width="wrap_content"
@@ -298,6 +298,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/space_4"
+                            android:visibility="gone"
                             android:layout_marginRight="@dimen/space_4"
                             android:text="@string/store"
                             android:textSize="@dimen/text_size_small" />
@@ -315,6 +316,7 @@
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="2dp"
+                            android:visibility="gone"
                             android:layout_marginTop="@dimen/space_2"
                             android:background="@color/gray" />
 
@@ -323,6 +325,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/space_12"
                             android:layout_marginTop="@dimen/space_6"
+                            android:visibility="gone"
                             android:text="@string/card"
                             android:textColor="@color/green"
                             android:textSize="@dimen/text_size_normal" />
@@ -334,25 +337,26 @@
                             android:layout_marginLeft="@dimen/space_4"
                             android:layout_marginRight="@dimen/space_4"
                             android:text="@string/debit"
-                            android:textSize="@dimen/text_size_small"
-                            android:visibility="visible" />
+                            android:visibility="gone"
+                            android:textSize="@dimen/text_size_small" />
 
                         <RadioButton
                             android:id="@+id/use_netbanking"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/space_4"
+                            android:visibility="gone"
                             android:layout_marginRight="@dimen/space_4"
                             android:fontFamily="@font/cold"
                             android:text="@string/net"
-                            android:textSize="@dimen/text_size_small"
-                            android:visibility="visible" />
+                            android:textSize="@dimen/text_size_small" />
 
 
                         <View
                             android:layout_width="match_parent"
                             android:layout_height="2dp"
                             android:layout_marginTop="@dimen/space_2"
+                            android:visibility="gone"
                             android:background="@color/gray" />
 
                         <Fonts.LatoBLack
@@ -361,6 +365,7 @@
                             android:layout_marginLeft="@dimen/space_12"
                             android:text="@string/tv_app_name"
                             android:textColor="@color/green"
+                            android:visibility="gone"
                             android:textSize="@dimen/text_size_normal" />
 
 
@@ -370,6 +375,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/space_4"
                             android:layout_marginRight="@dimen/space_4"
+                            android:visibility="gone"
                             android:fontFamily="@font/cold"
                             android:text="@string/paytm"
                             android:textSize="@dimen/text_size_small" />
@@ -378,11 +384,13 @@
                             android:layout_width="match_parent"
                             android:layout_height="2dp"
                             android:layout_marginTop="@dimen/space_2"
+                            android:visibility="gone"
                             android:background="@color/gray" />
 
                         <Fonts.LatoBLack
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:visibility="gone"
                             android:layout_marginLeft="@dimen/space_12"
                             android:text="@string/coupon"
                             android:textColor="@color/green"
@@ -394,6 +402,7 @@
                             style="@android:style/Widget.CompoundButton.RadioButton"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:visibility="gone"
                             android:layout_marginLeft="@dimen/space_4"
                             android:layout_marginRight="@dimen/space_4"
                             android:layout_marginTop="@dimen/space_4"
@@ -468,6 +477,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="100dp"
                         android:hint="@string/nav_note"
+                        android:layout_marginTop="@dimen/space_5"
                         android:id="@+id/extra_note"
                         android:gravity="top"
                         android:background="@drawable/bg21"
