--- a/app/src/main/res/layout/fragment_delivery_time.xml
+++ b/app/src/main/res/layout/fragment_delivery_time.xml
@@ -157,15 +157,22 @@
         android:background="@color/white"
         android:orientation="vertical">
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@color/black"
+            />
+
         <LinearLayout
-            android:padding="10dp"
+            android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
             <TextView
                 android:id="@+id/show_delivery_charges_string"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text="Delivery charges"
                 android:textColor="@color/black"
                 />
