--- a/app/src/main/res/layout/b_row_carty.xml
+++ b/app/src/main/res/layout/b_row_carty.xml
@@ -8,16 +8,17 @@
     android:layout_height="wrap_content"
     app:cardElevation="@dimen/space_5"
     app:cardUseCompatPadding="true"
-    card_view:cardCornerRadius="13dp"
-    >
+    card_view:cardCornerRadius="4dp">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:paddingTop="@dimen/space_10"
         android:paddingBottom="@dimen/space_4">
 
         <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/iv_subcat_img"
             android:layout_width="65dp"
             android:layout_height="65dp"
@@ -25,44 +26,37 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             app:civ_border_color="@color/gray"
-            android:layout_centerHorizontal="true"
             app:civ_border_width="1dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/icon" />
 
         <LinearLayout
-            android:layout_below="@id/iv_subcat_img"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginRight="4dp"
             android:orientation="vertical"
-            android:gravity="center_horizontal"
             app:layout_constraintLeft_toRightOf="@+id/iv_subcat_img"
             app:layout_constraintRight_toLeftOf="@+id/iv_subcat_minus"
             app:layout_constraintTop_toTopOf="@+id/iv_subcat_img">
 
             <Fonts.LatoBLack
-                android:maxLines="1"
                 android:id="@+id/tv_subcat_title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="Name"
-                android:fontFamily="@font/cold"
+                android:text="Jessyka swan"
                 android:textColor="#000"
-                android:gravity="center"
-                android:layout_gravity="center"
-                android:textSize="16sp" />
+                android:maxLines="1"
+                android:textSize="@dimen/text_size_small" />
 
             <Fonts.LatoBLack
                 android:id="@+id/tv_subcat_price"
-                android:fontFamily="@font/bold"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Price"
-                android:textColor="#000"
+                android:text="Jessyka swan"
+                android:textColor="#837e7e"
                 android:textSize="@dimen/text_size_X_small" />
 
             <LinearLayout
@@ -70,7 +64,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/space_3"
                 android:layout_marginTop="2dp"
-                android:visibility="gone"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -80,15 +73,42 @@
                     android:layout_height="wrap_content"
                     android:text="@string/tv_cart_total"
                     android:textColor="#000"
+                    android:visibility="gone"
                     android:textSize="@dimen/text_size_small" />
 
-                <Fonts.LatoBLack
-                    android:id="@+id/tv_subcat_total"
+
+                <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=" TextView"
-                    android:textColor="#000"
-                    android:textSize="@dimen/text_size_small" />
+                    android:layout_height="25dp"
+                    android:layout_marginBottom="@dimen/space_3"
+                    android:layout_marginTop="@dimen/space_4"
+                    android:background="@drawable/slider_shape"
+                    android:gravity="center_vertical">
+
+                    <Fonts.LatoBLack
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/text_tvr"
+                        android:layout_marginLeft="@dimen/space_2"
+                        android:text="@string/rewards_points"
+                        android:textColor="#000"
+                        android:textSize="13sp" />
+
+                    <Fonts.LatoBLack
+                        android:id="@+id/tv_reward_point"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@id/text_tvr"
+                        android:layout_marginRight="@dimen/space_5"
+                        android:layout_marginLeft="@dimen/space_15"
+                        android:text=""
+                        android:textColor="#000"
+                        android:textSize="@dimen/text_size_small" />
+
+
+                </RelativeLayout>
+
                 <Fonts.LatoBLack
                     android:id="@+id/textView6"
                     android:layout_width="wrap_content"
@@ -98,39 +118,18 @@
                     android:textColor="#000"
                     android:textSize="@dimen/text_size_small" />
 
+                <Fonts.LatoBLack
+                    android:id="@+id/tv_subcat_total"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" TextView"
+                    android:layout_marginLeft="@dimen/space_5"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="@dimen/text_size_small" />
+
+
             </LinearLayout>
 
-            <RelativeLayout
-                android:layout_width="130dp"
-                android:layout_height="25dp"
-                android:layout_marginBottom="@dimen/space_3"
-                android:visibility="gone"
-                android:layout_marginTop="@dimen/space_4"
-                android:background="@drawable/slider_shape"
-                android:gravity="center_vertical">
-
-                <Fonts.LatoBLack
-                    android:id="@+id/text_rw"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/space_3"
-                    android:text="@string/rewards_points"
-                    android:textColor="#000"
-                    android:textSize="@dimen/text_size_small" />
-
-                <Fonts.LatoBLack
-
-                    android:id="@+id/tv_reward_point"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                     android:layout_alignParentEnd="true"
-                    android:layout_alignRight="@dimen/space_18"
-                    android:text=""
-                    android:textColor="#000"
-                    android:textSize="@dimen/text_size_small" />
-
-
-            </RelativeLayout>
 
         </LinearLayout>
 
@@ -138,14 +137,12 @@
             android:id="@+id/iv_subcat_plus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="8dp"
-            android:visibility="gone"
+            android:layout_marginTop="25dp"
+            android:layout_marginRight="6dp"
+            android:background="@color/green"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/add"
-            android:background="@color/green"/>
+            app:srcCompat="@drawable/add" />
 
         <TextView
             android:id="@+id/tv_subcat_contetiy"
@@ -153,8 +150,6 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/space_8"
             android:layout_marginEnd="@dimen/space_8"
-            android:visibility="gone"
-            android:layout_marginRight="@dimen/space_8"
             android:layout_marginTop="@dimen/space_8"
             android:text="0"
             app:layout_constraintBottom_toBottomOf="@+id/iv_subcat_plus"
@@ -166,18 +161,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/space_8"
-            android:layout_marginRight="@dimen/space_8"
-            android:visibility="gone"
-            android:background="@color/green"
             app:layout_constraintBottom_toBottomOf="@+id/iv_subcat_plus"
             app:layout_constraintRight_toLeftOf="@+id/tv_subcat_contetiy"
             app:layout_constraintTop_toTopOf="@+id/iv_subcat_plus"
-            app:srcCompat="@drawable/subtract" />
+            app:srcCompat="@drawable/subtract"
+            android:background="@color/green"/>
 
         <Fonts.LatoBLack
+            android:visibility="gone"
             android:id="@+id/tv_subcat_add"
             android:layout_width="0dp"
-            android:visibility="gone"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_8"
             android:background="@drawable/bg_rounded_button"
@@ -193,12 +186,11 @@
         <ImageView
             android:id="@+id/iv_subcat_remove"
             android:layout_width="25dp"
-            android:visibility="gone"
             android:layout_height="25dp"
             android:layout_marginStart="4dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_close" />
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
