--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -325,6 +325,7 @@
             <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_weight="1"
+                android:visibility="gone"
                 android:layout_height="wrap_content"
                 >
                 <com.facebook.login.widget.LoginButton
