--- a/app/src/main/res/layout/b_row_storey.xml
+++ b/app/src/main/res/layout/b_row_storey.xml
@@ -43,6 +43,7 @@
                 android:layout_margin="3dp"
                 style="?android:attr/ratingBarStyleSmall"
                 android:numStars="5"
+                android:visibility="gone"
                 android:id="@+id/rating_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
