--- a/app/src/main/res/layout/row_store.xml
+++ b/app/src/main/res/layout/row_store.xml
@@ -30,6 +30,7 @@
                 android:theme="@style/RatingBar"
                 android:layout_margin="3dp"
                 style="?android:attr/ratingBarStyleSmall"
+                android:visibility="gone"
                 android:numStars="5"
                 android:id="@+id/rating_bar"
                 android:layout_width="wrap_content"
