--- a/app/src/main/res/layout/fragment_stores.xml
+++ b/app/src/main/res/layout/fragment_stores.xml
@@ -334,18 +334,17 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="210dp"
-                    android:id="@+id/dealday"
                     android:background="@color/white">
                     <com.daimajia.slider.library.SliderLayout
-                        android:id="@+id/deal_banner"
+                        android:id="@+id/deal_bannery"
                         android:layout_width="match_parent"
-                        android:layout_height="210dp"
+                        android:layout_height="match_parent"
                         >
                     </com.daimajia.slider.library.SliderLayout>
                 </LinearLayout>
 
-
                 <TextView
+                    android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/popular"
