--- a/app/src/main/res/layout/data_placeholder4.xml
+++ b/app/src/main/res/layout/data_placeholder4.xml
@@ -6,7 +6,7 @@
     >
 
     <View
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:id="@+id/thumbnail"
         android:backgroundTint="@color/gray"
         android:layout_width="150dp"
